# ChangeLog for games-fps/doom3
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/games-fps/cvs-repo/gentoo-x86/games-fps/doom3/ChangeLog,v 1.17 2005/10/21 17:29:42 wolf31o2 Exp $

  21 Oct 2005; Chris Gianelloni <wolf31o2@gentoo.org> doom3-1.3.1302.ebuild:
  Added addition dir variable to games_make_wrapper for bug #109793.

  21 Sep 2005; Chris Gianelloni <wolf31o2@gentoo.org> doom3-1.3.1302.ebuild:
  Changed check_license to explicitly list license to check.

  30 Aug 2005; Chris Gianelloni <wolf31o2@gentoo.org> doom3-1.3.1302.ebuild:
  Changed to match new 3dgamers mirrors structure in thirdpartymirrors.

  01 Jul 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  -doom3-1.1.1286.ebuild, doom3-1.3.1302.ebuild:
  Marked stable on x86 and amd64, removing old versions.

  27 May 2005; Chris Gianelloni <wolf31o2@gentoo.org> doom3-1.3.1302.ebuild:
  Added icon download and closing bug #94186.

  25 May 2005; Chris Gianelloni <wolf31o2@gentoo.org> doom3-1.3.1302.ebuild:
  Removing RoE junk and closing bug #93969.

  25 May 2005; Chris Gianelloni <wolf31o2@gentoo.org> doom3-1.3.1302.ebuild:
  Fixing typo and closing bug #93963.

  25 May 2005; Chris Gianelloni <wolf31o2@gentoo.org> doom3-1.3.1302.ebuild:
  Added Punkbuster support.

*doom3-1.3.1302 (25 May 2005)

  25 May 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  +doom3-1.3.1302.ebuild:
  Version bump to latest patch and closing bug #93857.

  18 Apr 2005; Chris Gianelloni <wolf31o2@gentoo.org> doom3-1.1.1286.ebuild:
  Added 3dgamers mirrors and closing bug #89361.

  13 Jan 2005; Chris Gianelloni <wolf31o2@gentoo.org> doom3-1.1.1286.ebuild:
  Fixed RDEPEND for amd64.

*doom3-1.1.1286 (26 Nov 2004)

  26 Nov 2004; Chris Gianelloni <wolf31o2@gentoo.org> -files/doom3,
  -doom3-1.1.1282.ebuild, +doom3-1.1.1286.ebuild:
  Version bumped to new patch-level with alsa and amd64 support.

  09 Nov 2004; Chris Gianelloni <wolf31o2@gentoo.org> :
  Fixing digest
