@@ -1,4 +1,4 @@
-MD5 58201e8ed85791f6763d1107313f165b ChangeLog 534
-MD5 7fa6ec075b5e4d012e288676b34b19fe doom3-data-1.1.1282.ebuild 1348
+MD5 462bdcfa43ee970548370cff257bb06a ChangeLog 698
+MD5 0dc73636b448a8af661589961e5a7553 doom3-data-1.1.1282.ebuild 1353
 MD5 d41d8cd98f00b204e9800998ecf8427e files/digest-doom3-data-1.1.1282 0
 MD5 c0c31e633eaaed2a501119d465d9cf70 metadata.xml 500
