@@ -1,4 +1,6 @@
-MD5 aa54df4f1923f49bcb2e886be275ab53 ChangeLog 2662
+MD5 369ccdfd788216db8e98e1cac9a1ee08 ChangeLog 2842
+MD5 09097c40a537e4c46df6b2bae399cfb7 doom3-1.3.1302-r1.ebuild 2472
 MD5 32e0f4b3043f88f4fb8b6643faf46f7a doom3-1.3.1302.ebuild 3028
 MD5 ee418b79762e7a8192014b3288671c9d files/digest-doom3-1.3.1302 127
-MD5 f17b9b8fa07a38914fe1c03268f51678 metadata.xml 158
+MD5 ee418b79762e7a8192014b3288671c9d files/digest-doom3-1.3.1302-r1 127
+MD5 6dc8bb8514d4dce12d192cff1d9ed47f metadata.xml 617
