@@ -1,0 +1,2 @@
+MD5 b1d04da2d64bb8d54f64cbaa2fdb4490 doom3-linux-1.3.1302.x86.run 17199582
+MD5 f99eb141eecc4b9dd188d6819d741546 doom3.png 6502
