@@ -2,4 +2,12 @@
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
 <herd>games</herd>
+<longdescription>
+Science has unlocked the gates to the unknown, and now only one man stands
+between Hell and Earth. A sci-fi horror masterpiece, DOOM 3 is like nothing you
+have experienced. Dramatic storyline, pulse-pounding action, incredible
+graphics, and revolutionary technology combine to draw you into the most
+frightening and gripping first person gaming experience ever created. For more
+information, checkout http://www.doom3.com
+</longdescription>
 </pkgmetadata>
