@@ -1,6 +1,12 @@
 # ChangeLog for games-fps/doom3
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/games-fps/cvs-repo/gentoo-x86/games-fps/doom3/ChangeLog,v 1.17 2005/10/21 17:29:42 wolf31o2 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/games-fps/cvs-repo/gentoo-x86/games-fps/doom3/ChangeLog,v 1.18 2005/10/22 16:51:55 wolf31o2 Exp $
+
+*doom3-1.3.1302-r1 (22 Oct 2005)
+
+  22 Oct 2005; Chris Gianelloni <wolf31o2@gentoo.org> metadata.xml,
+  +doom3-1.3.1302-r1.ebuild:
+  Initial import of my split ebuilds for doom3.
 
   21 Oct 2005; Chris Gianelloni <wolf31o2@gentoo.org> doom3-1.3.1302.ebuild:
   Added addition dir variable to games_make_wrapper for bug #109793.
